--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express-validator": "^7.0.1",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/uuid": "^9.0.2",
     "@types/uuid-validate": "0.0.1",
     "nodemon": "^2.0.22",
