--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.362.0",
     "@aws-sdk/client-dynamodb": "^3.362.0",
     "@types/mongodb": "^4.0.7",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
@@ -42,6 +43,7 @@
     "uuid-validate": "0.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/uuid": "^9.0.2",
