--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
@@ -46,6 +47,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.198",
     "@types/uuid": "^9.0.2",
     "@types/uuid-validate": "0.0.1",
     "nodemon": "^2.0.22",
