--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "outDir": "./dist",
         "moduleResolution": "node",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
     }
 }
