--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
     "dev": "NODE_ENV=development nodemon src/index.ts",
-    "build": "rimraf dist && tsc"
+    "build": "rimraf dist && tsc",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "inversify-express-utils": "^6.4.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "module-alias": "^2.2.3",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
@@ -46,12 +47,27 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.198",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "@types/uuid-validate": "0.0.1",
+    "jest": "^29.6.4",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-jest": "0.0.1",
     "typescript": "^5.1.3"
+  },
+  "_moduleAliases": {
+    "@application": "src/application",
+    "@dependency-injection": "src/dependency-injection",
+    "@domain": "src/domain",
+    "@infraestructure": "src/infraestructure",
+    "@shared": "src/shared",
+    "@tests": "tests"
   }
 }
