--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node src/index.ts",
     "dev": "NODE_ENV=development nodemon src/index.ts",
     "build": "rimraf dist && tsc",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,8 @@
   },
   "homepage": "https://github.com/manderdeveloper/foodie-fusion-api#readme",
   "dependencies": {
-    "@aws-sdk/client-cognito-identity-provider": "^3.362.0",
-    "@aws-sdk/client-dynamodb": "^3.362.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.405.0",
+    "@aws-sdk/client-dynamodb": "^3.405.0",
     "@types/mongodb": "^4.0.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -35,8 +36,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.3.2",
+    "mongodb": "^5.8.1",
+    "mongoose": "^7.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "swagger-jsdoc": "^6.2.8",
@@ -51,8 +52,11 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.198",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.2",
+    "@types/uuid": "^9.0.3",
     "@types/uuid-validate": "0.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint": "^8.48.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
@@ -60,7 +64,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-jest": "0.0.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "_moduleAliases": {
     "@application": "src/application",
