--- a/package.json
+++ b/package.json
@@ -46,17 +46,21 @@
     "uuid-validate": "0.0.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.198",
+    "@types/module-alias": "^2.0.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.3",
     "@types/uuid-validate": "0.0.1",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
+    "faker": "^6.6.6",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
