feat (readme): add description

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
 NODE_ENV=
 HOST=
 PORT=
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_COGNITO_USER_POOL=
+AWS_URL_TABLE=
+REDIS_HOST=
+REDIS_PORT=
+AWS_COGNITO_CLIENT_ID=
+AWS_COGNITO_CLIENT_SECRET=
+JSONWEBTOKEN_SECRET=
+ADMIN_API_KEY=
+ADMIN_API_KEY_VALUE=
+JWT_SECRET=
+SALTED_ROUNDS=
+MONGO_URI=
